# proof-sim-core

./: .gitignore  .gitlab-ci.yml  README.md  createLocalProofStandardImage.sh  model_generator.sh  runTest.py  setup.cfg  testing.md
docker/proof-standard/: Dockerfile  Dockerfile-local-python-dev
proofcore/base/: SocketReader.py  SocketWriter.py  basewrapper.py  cliargparser.py
proofcore/models/: BaseMessage.py  BlockStatus.py  MessageType.py  NotifyMessage.py  SimulationPhase.py  SyncMessage.py  ValueMessage.py
proofcore/templates/: WrapperTemplate.py
proofcore/util/: proofLogging.py  proofLogging_local.py
tests/base/: test_basewrapper.py
tests/core/default/: test_default_wrapper.py
tests/core/default/inputs/: messageSync.json  messageValue.json  outputsList.json
tests/core/default/outputs/: messageNotify.json  messageValue.json
tests/core/fmu/: staging_test_fmu_wrapper.py
tests/core/fmu/inputs/: inputList.json  messageTact.json  messageValue.json  outputsList.json
tests/core/fmu/outputs/: messageNotify.json  messageValue.json
tests/templates/: test_wrapper_template.py
tests/templates/inputs/: inputList.json  messageTact.json
tests/util/: test_proofLogging.py
