[metadata]
name = proof-sim-core
version = 2.3.0
author = IAI
description = Proof Core API
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    pydantic>=1.9.0
    build
    twine
    requests
    matplotlib
python_requires = >=3.8

[options.packages.find]
where = .
exclude =
    tests
    tests.*

[build]
build_base = /tmp/build

[egg_info]
egg_base = /tmp
